--- a/Road Adventure/Base.lproj/Main.storyboard
+++ b/Road Adventure/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FqG-OF-1sW">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -12,35 +12,15 @@
         <scene sceneID="mEk-Gl-T1Q">
             <objects>
                 <viewController id="FqG-OF-1sW" customClass="HomeVC" customModule="Road_Adventure" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YfS-ky-bnH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <view key="view" contentMode="scaleToFill" id="YfS-ky-bnH" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TOG-ET-WYI">
-                                <rect key="frame" x="20" y="408" width="130" height="80"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Shop"/>
-                                <connections>
-                                    <action selector="shop:" destination="FqG-OF-1sW" eventType="touchUpInside" id="icJ-Gx-W22"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kEK-XR-jQk">
-                                <rect key="frame" x="264" y="408" width="130" height="80"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Play"/>
-                                <connections>
-                                    <action selector="play:" destination="FqG-OF-1sW" eventType="touchUpInside" id="SIu-Kb-nq7"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="CEQ-l9-5On"/>
                     </view>
                     <connections>
-                        <segue destination="BV1-FR-VrT" kind="presentation" identifier="toGameVC" modalPresentationStyle="fullScreen" id="EMf-ku-xAe"/>
-                        <segue destination="DHH-uC-rWF" kind="presentation" identifier="toChooseVC" modalPresentationStyle="fullScreen" id="oa3-UI-V2x"/>
+                        <segue destination="BV1-FR-VrT" kind="presentation" identifier="toGameVC" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="EMf-ku-xAe"/>
+                        <segue destination="DHH-uC-rWF" kind="presentation" identifier="toChooseVC" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="oa3-UI-V2x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MXE-J7-165" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -52,45 +32,40 @@
             <objects>
                 <viewController id="DHH-uC-rWF" customClass="ChooseVC" customModule="Road_Adventure" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nad-Ni-eiW" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gnV-y1-xfK">
-                                <rect key="frame" x="20" y="44" width="44" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="Back:" destination="DHH-uC-rWF" eventType="touchUpInside" id="UEF-vk-kWs"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" red="0.83223599199999998" green="0.85789328809999998" blue="0.86131811140000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="YsE-bU-SfB"/>
                     </view>
                     <connections>
-                        <segue destination="FqG-OF-1sW" kind="presentation" identifier="toHomeVC" modalPresentationStyle="fullScreen" id="GkA-Ma-ohj"/>
+                        <segue destination="FqG-OF-1sW" kind="presentation" identifier="toHomeVC" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="GkA-Ma-ohj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BHd-Il-bTE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1149.2753623188407" y="239.73214285714283"/>
+            <point key="canvasLocation" x="-1149.5999999999999" y="239.73013493253376"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="Road_Adventure" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                     </view>
                     <navigationItem key="navigationItem" id="Yan-Ep-RNN"/>
+                    <connections>
+                        <segue destination="FqG-OF-1sW" kind="presentation" identifier="toMainMenu" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="Yku-OF-m53"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="97"/>
+            <point key="canvasLocation" x="-258" y="25"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="GkA-Ma-ohj"/>
+    </inferredMetricsTieBreakers>
 </document>
